--- a/Real_Estate/bin/src/main/resources/application.properties
+++ b/Real_Estate/bin/src/main/resources/application.properties
@@ -1,1 +1,35 @@
 
+
+server.port=8585
+
+#to add viewresolver
+#spring.mvc.view.prefix=/WEB-INF/views/
+#spring.mvc.view.suffix=.jsp
+#spring.servlet.multipart.enabled=true
+#spring.servlet.multipart.max-file-size=10MB
+#spring.servlet.multipart.max-request-size=10MB
+
+
+
+#spring datasource
+spring.datasource.url = jdbc:mysql://localhost:3306/abc?useSSL=false
+#&serverTimezone=UTC&useLegacyDatetimeCode=false&zeroDateTimeBehavior=CONVERT_TO_NULL
+spring.datasource.username=root
+spring.datasource.password=lalit76342
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=kunalshirpure01@gmail.com
+spring.mail.password=ydyinsdbcqwupzhz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
